fixed underline animation overflow

--- a/main.scss
+++ b/main.scss
@@ -24,6 +24,9 @@ nav {
     position: relative;
     text-decoration: none;
     transition: 200ms;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    box-sizing: border-box;
   }
   li {
     position: relative;
@@ -31,21 +34,23 @@ nav {
   a::after {
     content: '';
     background-color: white;
-    width: 20%;
+    width: 0%;
     height: 5px;
     z-index: 999;
     opacity: 0;
     position: absolute;
     transition: 200ms;
-
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    box-sizing: border-box;
     left: 0;
     bottom: -5;
   }
   a:hover {
-    color: rgb(233, 233, 233);
+    // color: rgb(233, 233, 233);
   }
   a:hover::after {
-    width: 50%;
+    width: 100%;
     opacity: 100;
   }
   .navTitle {
@@ -54,7 +59,7 @@ nav {
   .navItems {
     font-size: 20px;
     a {
-      padding: 0px 10px 0px 10px;
+      margin: 0px 5px 0px 5px;
     }
   }
 }
